# clippboard-app

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: builds.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_watcher.rs  constants.rs  lib.rs  main.rs  tray.rs  watchers.rs
src-tauri/src/constants/: constants.rs  mod.rs
src-tauri/src/shortcut/: mod.rs  shortcut.rs
src-tauri/src/store/: store.rs
src-tauri/src/structures/: item_clipboard.rs  mod.rs  settings.rs
src-tauri/src/utils/: array.rs  data.rs  files.rs  mod.rs  path.rs  settings.rs  string.rs
src-tauri/src/window/: mod.rs  window.rs
src/Providers/: App-Providers.tsx
src/components/: Action-Menu.tsx  Audio-Content.tsx  Clipboard.tsx  ClipboardBody.tsx  Content-Card.tsx  Content-Renderer.tsx  Content-Settings.tsx  Document-Content.tsx  Footer.tsx  General-Settings.tsx  Header.tsx  History.tsx  Image-Content.tsx  Modal.tsx  New-Theme.tsx  Not-Result.tsx  OptionSquare.tsx  Settings.tsx  System-Settings.tsx  Text-Content-Editor.tsx  Theme-Preview.tsx  Theme-Settings.tsx  TopBar.tsx  Video-Content.tsx  Window-Controls.tsx  Windows.tsx  icon-square.tsx  square-text.tsx
src/constants/: constant.ts  sytem-options.ts
src/context/: Clipboard-Contex.tsx  Page-Contex.tsx  System-Settings-Context.tsx  Theme-Context.tsx
src/default/: values.ts
(+57 files in other folders)
