[package]
name = "Tau"
version = "0.1.2"
description = "clippboad manager"
authors = ["Jocsan Rueda"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clippboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-store = "2"
unicode-normalization = "0.1"
fs = "0.0.5"
tauri-plugin-fs = "2"
image = { version = "0.25", features = ["png"] }
thread-priority = "3.0.0"
dirs = "6.0.0"
notify = "8.2.0"
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }
gtk = "0.18.2"

[tauri]
plugins = ["clipboard"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

